# Pluma

./: .env.example  .gitignore  1_INSTALAR.bat  1_INSTALAR.sh  2_DETENER.bat  2_DETENER.sh  3_DESINSTALAR.bat  3_DESINSTALAR.sh  CHANGELOG.md  CLA.md  CONTRIBUTING.md  CUMPLIMIENTO.md  INSTALACION.md  KNOWN_ISSUES.md  LICENSE  Modelfile  README.md  RELEASE_NOTES_0.4.1-alpha.md  RELEASE_NOTES_0.4.2-alpha.md  RELEASE_NOTES_0.4.4-alpha.md  RELEASE_NOTES_0.4.5-alpha.md  RELEASE_NOTES_0.4.6-alpha.md  RELEASE_NOTES_0.5.0-beta.md  RELEASE_NOTES_0.6.0-beta.md  REPO_MANIFEST_0.4.1-alpha.md  REPO_MANIFEST_0.5.0-beta.md  SECURITY.md  SECURITY_HARDENING.md  desinstalar.bat  desinstalar.sh  detener.bat  detener.sh  docker-compose.yml  iniciar.bat  iniciar.sh  instalar.bat  instalar.sh  listado_main.txt
.github/: dependabot.yml
.github/workflows/: security-checks.yml  security.yml
backend/: .dockerignore  Dockerfile  HASHES.md  pyproject.toml  requirements.in  requirements.txt
backend/app/: __init__.py  api.py  auditoria.py  bootstrap.py  csrf.py  exportadores.py  extractor.py  identificador_tipo.py  llm.py  local_access.py  main.py  parser_sandbox.py  router.py  security_policy.py  version.py
docs/packaging/: README_ESTRUCTURA_RELEASE.md  README_INSTALACION_VISUAL_WINDOWS.md  README_MODO_LOCAL_BLOQUEADO.md  README_OFFLINE_READY.md  README_PRIMERO.md  README_PRIMERO.txt
docs/packaging/instalacion_linux_mac/: 01_INSTALAR_LINUX_MAC.sh  02_DETENER_LINUX_MAC.sh  03_DESINSTALAR_LINUX_MAC.sh
docs/releases/: RELEASE_NOTES_0.4.3-alpha.md
frontend/: README.md
frontend/static/: LICENSE.txt  app.js  index.html  styles.css
frontend/static/fonts/: README.md
installer/windows/: README_NSIS.md  build-installer.bat
installer/windows/gui/: PlumAInstaller.ps1
offline/images/: README.md
offline/models/: Modelfile.template.parameters  README.md
schemas/: dacs.yaml  isaar-cpf.yaml  isad-g.yaml  isdf.yaml  isdiah.yaml  pluma-runtime.yaml  ric.yaml
scripts/: comprobar_antes_de_subir.bat  comprobar_antes_de_subir.sh  pre_release_check.sh  security_static_check.py
sistema/: CONTRIBUTING.md  README.md  SECURITY_HARDENING.md
sistema/backend/: pyproject.toml  requirements.txt
sistema/ejemplos/: README.md
sistema/schemas/: tipos-documentales.yaml
tests/: conftest.py  test_dacs_y_ric.py  test_local_locked_policy.py  test_offline_paths_policy.py  test_release_configuration.py  test_security_basics.py  test_shutdown_ui_policy.py
tools/windows/: enforce-local-config.ps1  pluma-diagnostico.bat  pluma-env.bat  pluma-import-offline-model.bat  pluma-install-core.bat  pluma-load-offline-assets.bat  pluma-open.bat  pluma-stop-core.bat  pluma-uninstall-core.bat  pluma-wait-ready.bat
(+16 files in other folders)
