[project]
name = "pluma"
version = "0.4.16-alpha"
description = "Asistente de descripción archivística asistida por IA local"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Víctor Villapalos Sánchez" },
]
keywords = ["archivística", "ISAD(G)", "ISAAR", "ISDF", "ISDIAH", "IA", "Ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: XML",
]

dependencies = [
    # Web / API. Mantener estos mínimos alineados con requirements.txt.
    "fastapi>=0.136.0,<0.137",
    "uvicorn[standard]>=0.45.0,<0.46",
    "starlette>=1.0.0,<1.1",
    "python-multipart>=0.0.26,<0.1",
    "httpx>=0.28.1,<0.29",

    # Configuración y datos
    "pyyaml>=6.0.3,<7",

    # Procesamiento de documentos
    "pypdf>=6.10.2,<7",
    "pypdfium2>=5.7.1,<6",
    "python-docx>=1.2.0,<2",
    "Pillow>=12.2.0,<13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -----------------------------------------------------------------------------
# Ruff: linter y formateador
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # longitud de línea: la legibilidad prevalece en prompts largos y mensajes
    "I001",  # orden de imports: no debe bloquear CI; se corrige manualmente antes de release
    "B008",  # FastAPI usa File()/Form() en defaults por diseño
    "B904",  # endpoints FastAPI: se ocultan trazas internas mediante HTTPException
    "F841",  # variables de ElementTree creadas por legibilidad en exportadores XML
    "E741",  # nombres breves en comprensiones internas sin impacto funcional
]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
